--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/jsonwebtoken": "^9.0.10",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.9"
+		"@sveltejs/adapter-static": "^3.0.9",
+		"bcrypt": "^6.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^7.0.7",
+		"qrcode": "^1.5.4",
+		"zod": "^4.1.11"
 	}
 }
